<resources>
    <string name="app_name">AndroidApp</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="go_to_sign_up">Don\'t have an account yet? Sign up!</string>
    <string name="go_to_sign_in">Already registered? Go to sign in!</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_notes">Add Notes</string>
    <string name="logout">Logout</string>
</resources>